changes to allow bandwidth for stitchport and leaseend
